--- a/index.html
+++ b/index.html
@@ -465,9 +465,49 @@
         <!--Articles-->
         <div class="containerArticles">
             <div class="titleArticles">
-                <h3>Discover</h3>
+                <h3 class="txtArticle">Discover</h3>
 
-               
+                <div class="orderArticles">
+                    <span class="orderLine">
+                        <i class="fa-solid fa-border-all fa-lg"></i>
+                    </span>
+
+                    <span class="orderBars">
+                        <i class="fa-solid fa-bars fa-lg"></i>
+                    </span>
+                </div>
+
+               <div class="sectionOrder">
+                <div class="contentOrder">
+                    <h4 class="txtOrder">Order By</h3>
+                    <span class="iconOrder">
+                        <i class="fa-solid fa-chevron-down fa-lg order"></i>
+                    </span>
+                </div>
+
+                <form class="selectOrder">
+                    <ul class="listOrder">
+                        <li class="itemOrder">
+                            <h3 class="txtItemOrder">
+                                Popularity
+                            </h3>
+                        </li>
+
+                        <li class="itemOrder">
+                            <h3 class="txtItemOrder">
+                                Price: Lower To Higher
+                            </h3>
+                        </li>
+
+                        <li class="itemOrder">
+                            <h3 class="txtItemOrder">
+                                Price: Higher To Lower
+                            </h3>
+                        </li>
+
+                    </ul>
+                </form>
+               </div>
             </div>  
         </div>
         </div>
