--- a/index.html
+++ b/index.html
@@ -509,6 +509,10 @@
                 </form>
                </div>
             </div>  
+
+            <div class="contentArticles">
+                
+            </div>
         </div>
         </div>
 
