--- a/index.html
+++ b/index.html
@@ -477,6 +477,10 @@
                     </span>
                 </div>
 
+                <div class="filterQueries">
+                    
+                </div>
+
                <div class="sectionOrder">
                 <div class="contentOrder">
                     <h4 class="txtOrder">Order By</h3>
