--- a/index.html
+++ b/index.html
@@ -973,6 +973,17 @@
 
                     </ul>
                 </div>
+
+                <div class="containerPages">
+                    <ul class="listPages">
+                        <li><a href="#">1</a></li>
+                        <li><a href="#">2</a></li>
+                        <li><a href="#">1</a></li>
+                        <li><a href="#">1</a></li>
+                        <li><a href="#">1</a></li>
+                        <li><a href="#">1</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
         </div>
