--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
 
+<div class="containerGrandFather">
     <div class="containerAll">
         <!-- Header -->
 
@@ -985,6 +986,211 @@
                     </ul>
                 </div>
             </div>
+
+            <div class="contentArticlesBars">
+                <ul class="listArticleBars">
+                    <li class="itemArticleBars">
+                        <div class="contentTopBars">
+                            <img src="/img/articles/tecnologicos/poco-x3-pro.jpg" class="imageArticleBars">
+                        </div>
+
+                        <div class="charactersArticleBars">
+                            <h3 class="nameArticle">
+                                Celular Xiaomi Poco X3 Pro 256 GB 8GB RAM
+                            </h3>
+
+                            <p class="descriptionArticle">
+                                El producto es practicamente nuevo solo tiene 1 mes de uso, lo vendo por motivos economicos.
+                            </p>
+
+                            <h3 class="priceArticle">
+                                $789.999
+                            </h3>
+                        </div>
+                    </li>
+
+                    <li class="itemArticleBars">
+                        <div class="contentTopBars">
+                            <img src="/img/articles/tecnologicos/poco-x3-pro.jpg" class="imageArticleBars">
+                        </div>
+
+                        <div class="charactersArticleBars">
+                            <h3 class="nameArticle">
+                                Celular Xiaomi Poco X3 Pro 256 GB 8GB RAM
+                            </h3>
+
+                            <p class="descriptionArticle">
+                                El producto es practicamente nuevo solo tiene 1 mes de uso, lo vendo por motivos economicos.
+                            </p>
+
+                            <h3 class="priceArticle">
+                                $789.999
+                            </h3>
+                        </div>
+                    </li>
+
+                    <li class="itemArticleBars">
+                        <div class="contentTopBars">
+                            <img src="/img/articles/tecnologicos/poco-x3-pro.jpg" class="imageArticleBars">
+                        </div>
+
+                        <div class="charactersArticleBars">
+                            <h3 class="nameArticle">
+                                Celular Xiaomi Poco X3 Pro 256 GB 8GB RAM
+                            </h3>
+
+                            <p class="descriptionArticle">
+                                El producto es practicamente nuevo solo tiene 1 mes de uso, lo vendo por motivos economicos.
+                            </p>
+
+                            <h3 class="priceArticle">
+                                $789.999
+                            </h3>
+                        </div>
+                    </li>
+
+                    <li class="itemArticleBars">
+                        <div class="contentTopBars">
+                            <img src="/img/articles/tecnologicos/poco-x3-pro.jpg" class="imageArticleBars">
+                        </div>
+
+                        <div class="charactersArticleBars">
+                            <h3 class="nameArticle">
+                                Celular Xiaomi Poco X3 Pro 256 GB 8GB RAM
+                            </h3>
+
+                            <p class="descriptionArticle">
+                                El producto es practicamente nuevo solo tiene 1 mes de uso, lo vendo por motivos economicos.
+                            </p>
+
+                            <h3 class="priceArticle">
+                                $789.999
+                            </h3>
+                        </div>
+                    </li>
+
+                    <li class="itemArticleBars">
+                        <div class="contentTopBars">
+                            <img src="/img/articles/tecnologicos/poco-x3-pro.jpg" class="imageArticleBars">
+                        </div>
+
+                        <div class="charactersArticleBars">
+                            <h3 class="nameArticle">
+                                Celular Xiaomi Poco X3 Pro 256 GB 8GB RAM
+                            </h3>
+
+                            <p class="descriptionArticle">
+                                El producto es practicamente nuevo solo tiene 1 mes de uso, lo vendo por motivos economicos.
+                            </p>
+
+                            <h3 class="priceArticle">
+                                $789.999
+                            </h3>
+                        </div>
+                    </li>
+
+                    <li class="itemArticleBars">
+                        <div class="contentTopBars">
+                            <img src="/img/articles/tecnologicos/poco-x3-pro.jpg" class="imageArticleBars">
+                        </div>
+
+                        <div class="charactersArticleBars">
+                            <h3 class="nameArticle">
+                                Celular Xiaomi Poco X3 Pro 256 GB 8GB RAM
+                            </h3>
+
+                            <p class="descriptionArticle">
+                                El producto es practicamente nuevo solo tiene 1 mes de uso, lo vendo por motivos economicos.
+                            </p>
+
+                            <h3 class="priceArticle">
+                                $789.999
+                            </h3>
+                        </div>
+                    </li>
+
+                    <li class="itemArticleBars">
+                        <div class="contentTopBars">
+                            <img src="/img/articles/tecnologicos/poco-x3-pro.jpg" class="imageArticleBars">
+                        </div>
+
+                        <div class="charactersArticleBars">
+                            <h3 class="nameArticle">
+                                Celular Xiaomi Poco X3 Pro 256 GB 8GB RAM
+                            </h3>
+
+                            <p class="descriptionArticle">
+                                El producto es practicamente nuevo solo tiene 1 mes de uso, lo vendo por motivos economicos.
+                            </p>
+
+                            <h3 class="priceArticle">
+                                $789.999
+                            </h3>
+                        </div>
+                    </li>
+
+                    <li class="itemArticleBars">
+                        <div class="contentTopBars">
+                            <img src="/img/articles/tecnologicos/poco-x3-pro.jpg" class="imageArticleBars">
+                        </div>
+
+                        <div class="charactersArticleBars">
+                            <h3 class="nameArticle">
+                                Celular Xiaomi Poco X3 Pro 256 GB 8GB RAM
+                            </h3>
+
+                            <p class="descriptionArticle">
+                                El producto es practicamente nuevo solo tiene 1 mes de uso, lo vendo por motivos economicos.
+                            </p>
+
+                            <h3 class="priceArticle">
+                                $789.999
+                            </h3>
+                        </div>
+                    </li>
+
+                    <li class="itemArticleBars">
+                        <div class="contentTopBars">
+                            <img src="/img/articles/tecnologicos/poco-x3-pro.jpg" class="imageArticleBars">
+                        </div>
+
+                        <div class="charactersArticleBars">
+                            <h3 class="nameArticle">
+                                Celular Xiaomi Poco X3 Pro 256 GB 8GB RAM
+                            </h3>
+
+                            <p class="descriptionArticle">
+                                El producto es practicamente nuevo solo tiene 1 mes de uso, lo vendo por motivos economicos.
+                            </p>
+
+                            <h3 class="priceArticle">
+                                $789.999
+                            </h3>
+                        </div>
+                    </li>
+
+                    <li class="itemArticleBars">
+                        <div class="contentTopBars">
+                            <img src="/img/articles/tecnologicos/poco-x3-pro.jpg" class="imageArticleBars">
+                        </div>
+
+                        <div class="charactersArticleBars">
+                            <h3 class="nameArticle">
+                                Celular Xiaomi Poco X3 Pro 256 GB 8GB RAM
+                            </h3>
+
+                            <p class="descriptionArticle">
+                                El producto es practicamente nuevo solo tiene 1 mes de uso, lo vendo por motivos economicos.
+                            </p>
+
+                            <h3 class="priceArticle">
+                                $789.999
+                            </h3>
+                        </div>
+                    </li>
+                    
+                </ul>
+            </div>
         </div>
         </div>
 
@@ -1028,6 +1234,7 @@
             </div>
         </div>
     </div>
+</div>
 </body>
 
 </html>
